[package]
name = "ottd-map-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = { git = "https://github.com/jam1garner/binrw.git" }
xz2 = "0.1"
zstd = "0.12.1"
modular-bitfield = "0.11.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }