[package]
name = "ottd-map-parser"
description = "An OpenTTD map parser and writer."
authors = ["jf908"]
repository = "https://github.com/jf908/openttd-map-parser"
categories = ["encoding", "parser-implementations"]
readme = "README.md"
license = "GPL-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["xz2", "zstd"]

# I wish this overrode instead of appended default features
# [target.'cfg(target_arch = "wasm32")'.features]
# default = ["lzma-rs"]

[dependencies]
binrw = "0.13.3"
xz2 = { version = "0.1", optional = true }
lzma-rs = { version = "0.3", optional = true }
zstd = { version = "0.13.0", optional = true }
modular-bitfield = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde-tuple-vec-map = "1.0"
cfg-if = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
serde-wasm-bindgen = "0.6.3"
console_error_panic_hook = "0.1.7"
gloo-utils = { version = "0.2", features = ["serde"] }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
